<resources>
    <string name="app_name">Live360</string>
    <string name="network">网络</string>
    <string name="history">历史</string>
    <string name="setting">设置</string>
    <string name="H265">H.265</string>
    <string name="H246">H.264</string>
    <string name="scanbar">Scan Barcode</string>
    <string name="cancel">Cancel</string>
    <string name="ScaleVideo">ScaleVideo</string>
    <string name="reload">reload</string>
    <string name="rotate">rotate</string>
    <string name="Screenshot">Screenshot</string>
    <string name="Mute">Mute</string>
    <string name="time0">00:00/00:00</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="net_search">查找视频信息</string>

    <string name="set_setting">设置</string>

    <string name="popup_choice">请选择编码格式</string>

    <string name="net_scan">扫一扫</string>

    <string name="set_st">播放格式:</string>
    <string name="set_surface">SurfaceView</string>
    <string name="set_texture">TextureView</string>
    <string name="set_hwc">解码格式:</string>
    <string name="set_hard">硬解</string>
    <string name="set_soft">软解</string>
    <string name="start_vedio">播放</string>

    <string name="debugoff">Debug关</string>
    <string name="debugon">Debug开</string>
    <string name="debugchange">Debubg开关</string>
    <string name="vrchange">VR开关</string>
    <string name="time_picker_live_start_time">直播开始时间</string>
    <string name="time_picker_live_end_time">直播结束时间</string>
</resources>
