<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ksyun.vrplayer.Live360.activity.SettingActivity">

    <TextView
        android:id="@+id/text_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/player_black"
        android:text="@string/set_setting"
        android:textSize="32dp"/>
    <TextView
        android:id="@+id/txt_set_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="20dp"
        android:layout_below="@+id/text_setting"
        android:text="@string/debugchange"/>

    <Switch
        android:id="@+id/switch_set"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/text_setting"
        android:layout_toRightOf="@+id/txt_set_switch"
        android:layout_marginLeft="30dp"
        android:textOff="@string/debugoff"
        android:textOn="@string/debugon"/>

    <TextView
        android:id="@+id/txt_vr_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="20dp"
        android:layout_below="@+id/txt_set_switch"
        android:text="@string/vrchange"/>

    <Switch
        android:id="@+id/switch_vr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/switch_set"
        android:layout_toRightOf="@+id/txt_set_switch"
        android:layout_marginLeft="30dp"
        android:textOff="@string/debugoff"
        android:textOn="@string/debugon"/>




</RelativeLayout>
